# Nixm

./: .gitignore  README.md
nixm-backend/: Cargo.toml
nixm-backend-webhook/: main.py
nixm-frontend/: LICENSE  eslint.config.ts  package.json  tsconfig.app.json  tsconfig.json
nixm-frontend/src/: App.tsx
nixm-frontend/src/pages/: Main.tsx
scripts/: pyproject.toml
scripts/tools/: release.py
